# Bezier-x86

./: CMakeLists.txt  README.md  bezier.asm  bezier.h  main.c  vcpkg.json
